fix(feature):fixed alignment of section

--- a/src/Components/Home/styles/MainPage.module.css
+++ b/src/Components/Home/styles/MainPage.module.css
@@ -43,6 +43,11 @@ Table of Content:
 
 /*---------------------------------------------------- */
 /*----------------------------------------------------*/
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
 ul {
     list-style: none;
     margin: 0px;
@@ -58,11 +63,14 @@ a:focus {
     text-decoration: none;
     outline: none;
 }
-.row{
+.row {
+    width: 100%;
     display: flex;
+    box-sizing: border-box;
+    padding: 2rem;
+    justify-content: space-between;
     flex-wrap: wrap;
-    margin-right: -15px;
-    margin-left: -15px;
+    margin: 0 !important;
 }
 .row.m0 {
     margin: 0px;
@@ -462,7 +470,7 @@ i:before {
     padding-top: 15px;
 }
 .mainIndex {
-    background: url('../../../Assets/Images/slider-bg-1.png') no-repeat scroll center center;
+    background: url("../../../Assets/Images/slider-bg-1.png") no-repeat scroll center center;
     background-size: cover;
 }
 /* End Banner Area css
@@ -1390,9 +1398,9 @@ i:before {
     line-height: 30px;
     border: 3px solid rgba(204, 241, 255, 0.5);
     border-radius: 33px;
-    /* position: absolute;
+    position: absolute;
     bottom: 5px;
-    left: 2px; */
+    /* left: 2px; */
 }
 
 .more_btn:hover {
@@ -2513,7 +2521,7 @@ i:before {
 
 .footer_copyright .float_sm_left h5 {
     font-size: 14px;
-    color: #551A8B;
+    color: #551a8b;
     font-family: "Roboto", sans-serif;
     text-transform: uppercase;
     font-weight: 500;
@@ -2542,7 +2550,7 @@ i:before {
     margin-right: 0px;
 }
 
-.footer_copyright .float_sm_right .social_icon:hover a{
+.footer_copyright .float_sm_right .social_icon:hover a {
     cursor: pointer;
     color: #fff;
 }
@@ -2554,9 +2562,10 @@ i:before {
 /* Service css
 ============================================================================================ */
 .containerOrbiz {
-    max-width: 1400px;
-    margin-left: 200px;
+    max-width: 100vw;
+    /* margin-left: 200px; */
     margin-top: 5rem;
+    box-sizing: border-box;
 }
 
 .serviceArea {
@@ -2568,9 +2577,13 @@ i:before {
     border: 1px solid #b10400;
     text-align: center;
     position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     border-radius: 20px;
     padding-bottom: 30px;
-    min-height: 360px;
+    height: 110%;
+    /* justify-content: space-between; */
 }
 .serviceItem:hover {
     -webkit-box-shadow: 0px 14px 38px 0px rgba(0, 0, 0, 0.11);
@@ -2625,26 +2638,26 @@ section.container {
     width: 50%;
 }
 
-.col_md_2{
-    width: 16.66%;
+.col_md_2 {
+    width: 16%;
 }
 
-.col_lg_6{
+.col_lg_6 {
     flex: 0 0 50%;
     max-width: 50%;
 }
 
-.col_lg_12{
+.col_lg_12 {
     flex: 0 0 100%;
     max-width: 100%;
 }
 
-.img_fluid{
+.img_fluid {
     max-width: 100%;
     height: auto;
 }
 
-.form_control{
+.form_control {
     display: block;
     width: 100%;
     padding: 0.375rem 0.75rem;
@@ -2656,5 +2669,5 @@ section.container {
     background-clip: padding-box;
     border: 1px solid #ced4da;
     border-radius: 0.25rem;
-    transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+    transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
 }
